--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -67,11 +67,12 @@
             <div class="text-center mt-4">
               <ul class="list-unstyled">
                 <li class="dropdown">
-                  Don't have an account? <a data-toggle="dropdown" href="#" class="text-blue">Sign up</a>
+                  Don't have an account? <a data-toggle="dropdown" href=" " class="text-blue">Sign up</a>
                   <ul class="dropdown-menu">
-                    <li><a href="{% url 'account:employer-registration' %}" class="text-blue p-md-2">Employer</a></li>
-                    <li><a href="{% url 'account:employee-registration' %}" class="text-blue p-md-2">Employee</a></li>
+                    <li><a href="{% url 'account:employer-registration' %}" class="text-black" >Employer</a></li>
+                    <li><a href="{% url 'account:employee-registration' %}" class="text-black">Employee</a></li>
                   </ul>
+                  
                 </li>
               </ul>
             </div>
