--- a/remote_Job/template/header.html
+++ b/remote_Job/template/header.html
@@ -77,7 +77,7 @@
                 <li class="pr-3 has-children">
                   <a>Register</a>
                   <ul class="dropdown">
-                    <li><a href="{% url 'account:employer-registration' %}">Employer</a></li>
+                    <li><a href="{% url 'account:employer-registration' %}">Vendor</a></li>
                     <li><a href="{% url 'account:employee-registration' %}">Employee</a></li>
                   </ul>
                 </li>
