--- a/remote_Job/template/jobapp/terms-condition.html
+++ b/remote_Job/template/jobapp/terms-condition.html
@@ -40,7 +40,7 @@
 </div>
     <div class="container">
 
-        <div class="col-lg-12 mb-5 " style="background-color: #ffffff; position: relative;">
+        <div class="col-lg-12 mb-5 " align="justify" style="background-color: #ffffff; position: relative;">
             <div
                 style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;">
             </div>
@@ -80,10 +80,10 @@
 
             <!-- Section 4 -->
             <h3>4. Job Listings</h3>
-            <p>Employers using the Platform to post job listings must comply with the following:</p>
+            <p>Vendors using the Platform to post job listings must comply with the following:</p>
             <ul>
                 <li>Job listings must be accurate and not misleading.</li>
-                <li>Employers must adhere to equal opportunity employment laws.</li>
+                <li>Vendors must adhere to equal opportunity employment laws.</li>
                 <li>We do not guarantee the accuracy or authenticity of job listings.</li>
             </ul>
 
