--- a/remote_Job/static/bs4/scss/_mixins.scss
+++ b/remote_Job/static/bs4/scss/_mixins.scss
@@ -2,8 +2,8 @@
 //
 // Used in conjunction with global variables to enable certain theme features.
 
-// Vendor
-@import "vendor/rfs";
+// Employer
+@import "employer/rfs";
 
 // Deprecate
 @import "mixins/deprecate";
