--- a/remote_Job/template/account/employer-registration.html
+++ b/remote_Job/template/account/employer-registration.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1 class="text-white font-weight-bold">Employer/Sign Up</h1>
+        <h1 class="text-white font-weight-bold">Vendor/Sign Up</h1>
         <div class="custom-breadcrumbs">
           <a href="{% url 'jobapp:home' %}">Home</a> <span class="mx-2 slash">/</span>
           <span class="text-white"><strong>Sign Up</strong></span>
@@ -30,7 +30,7 @@
           <div class="col-lg-12" style="background-color: #ffffff; position: relative;">
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -1;"></div>
             <div style="position: absolute; top: -10px; left: -10px; right: -10px; bottom: -10px; box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.1); z-index: -2;"></div>
-            <h2 class="mb-4 text-center">Employer/Sign Up</h2>
+            <h2 class="mb-4 text-center">Vendor/Sign Up</h2>
             {% csrf_token %}
             {% for field in form %}
                 <div class="row form-group">
