--- a/remote_Job/template/jobapp/contact_us.html
+++ b/remote_Job/template/jobapp/contact_us.html
@@ -22,7 +22,7 @@
     <section class="site-section" id="next-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mb-5 mb-lg-0">
+                <div class="col-lg-6  mb-lg-0">
                     {% include 'messages.html' %}
                     <form action="#" method="POST">
                         {% csrf_token %}
@@ -64,6 +64,23 @@
         </div>
     </section>
     
+    <section>
+        <div class="container mb-5">
+            <div class="row align-items-center justify-content-center">
+              <!-- Map section -->
+              <div class="col-md-12">
+                <div class="mb-5 text-center">
+                  <h1 class="text-black font-weight-bold">Our Office Location</h1>
+                  <p>Visit us at Herald College, Kathmandu:</p>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3533.878769267631!2d85.3307661!3d27.712094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb196de5da5741%3A0x652792640c70ede9!2sHerald%20College%20Kathmandu!5e0!3m2!1sen!2snp!4v1640804481237!5m2!1sen!2snp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+
+              </div>
+            </div>
+          </div>
+    </section>
     
 
 {% endblock %}
