online course and video call added

--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -69,7 +69,7 @@
                 <li class="dropdown">
                   Don't have an account? <a data-toggle="dropdown" href=" " class="text-blue">Sign up</a>
                   <ul class="dropdown-menu">
-                    <li><a href="{% url 'account:employer-registration' %}" class="text-black" >Employer</a></li>
+                    <li><a href="{% url 'account:employer-registration' %}" class="text-black" >Vendor</a></li>
                     <li><a href="{% url 'account:employee-registration' %}" class="text-black">Employee</a></li>
                   </ul>
                   
