--- a/remote_Job/template/footer.html
+++ b/remote_Job/template/footer.html
@@ -27,7 +27,10 @@
             <h3>Support</h3>
             <ul class="list-unstyled">
               <li><a href="{% url 'jobapp:terms-condition' %}">Terms and condition</a></li>
-              <li><a href="#" id="donateButton">Donate</a></li>
+              <!-- <li><a href="#" id="donateButton">Donate</a></li> -->
+              {% if user.is_authenticated and user.role == 'employee'  %}
+                <li><a href="{% url 'jobapp:courses' %}">Courses</a></li>
+                {%endif%}
 
             </ul>
           </div>
@@ -61,10 +64,9 @@
   
   </div>
 <!-- Include Khalti Checkout Web script -->
-<script src="https://unpkg.com/khalti-checkout-web"></script>
-<!-- <script src="https://khalti.com/static/khalti-checkout.js"></script> -->
+<!-- <script src="https://unpkg.com/khalti-checkout-web"></script> -->
 
-
+<!-- 
 <script>
   // Replace with your actual Khalti public key
   const khaltiPublicKey = "test_public_key_dc1970829015486687411487e45d789a";
@@ -150,4 +152,4 @@
           }
       });
   });
-</script>
+</script> -->
