--- a/remote_Job/template/jobapp/dashboard.html
+++ b/remote_Job/template/jobapp/dashboard.html
@@ -30,6 +30,7 @@
                     <h5 class="card-header text-center">My All Job</h5>
                     {% if jobs %}
                     <table class="table text-center mt-5">
+                        
                         <thead class="thead-dark">
                             <tr>
                                 <th>Job Title</th>
@@ -111,82 +112,139 @@
                     {% elif user.role == "employee" %}
 
 
+                    <!-- Add this to the relevant section of your HTML document -->
+
                     <ul class="mb-3 nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Bookmarked Job</a>
-                          </li>
-                          <li class="nav-item">
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Applied Job</a>
                         </li>
-                      </ul>
-                      <div class="tab-content" id="myTabContent">
+                        <li class="nav-item">
+                            <a class="nav-link" id="course-tab" data-toggle="tab" href="#course" role="tab" aria-controls="course" aria-selected="false">Courses</a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                            <!-- Bookmarked Jobs content -->
                             <h5 class="card-header text-center">Bookmarked Posts</h5>
                             {% if savedjobs %}
-                            <table class="table text-center mt-5">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>Job Title</th>
-                                        <th>Posted Date</th>
-                                        <th>Date expiring</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for job in savedjobs %}
-                                    <tr id="row_{{ job.id }}">
-                                        <td><a href="{% url 'jobapp:single-job' job.job.id %}">{{ job.job.title }}</a></td>
-                                        <td>{{ job.timestamp | date:'M d, Y'  }}</td>
-                                        <td>{{ job.job.last_date | date:'M d, Y' }}</td>
-                                        <td>
-                                            <button onclick="call_sw_alert_func('{% url 'jobapp:delete-bookmark' job.id %}','{{ job.id }}','Once Deleted, This Post Will Remove From Your Favourite List!')" class="btn btn-danger btn-sm">Delete</button>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
+                                <table class="table text-center mt-5">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Job Title</th>
+                                            <th>Posted Date</th>
+                                            <th>Date expiring</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for job in savedjobs %}
+                                            <tr id="row_{{ job.id }}">
+                                                <td><a href="{% url 'jobapp:single-job' job.job.id %}">{{ job.job.title }}</a></td>
+                                                <td>{{ job.timestamp | date:'M d, Y' }}</td>
+                                                <td>{{ job.job.last_date | date:'M d, Y' }}</td>
+                                                <td>
+                                                    <button onclick="call_sw_alert_func('{% url 'jobapp:delete-bookmark' job.id %}','{{ job.id }}','Once Deleted, This Post Will Remove From Your Favourite List!')" class="btn btn-danger btn-sm">Delete</button>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
                             {% else %}
-                            <p class="m-5">You have not any save job yet !! </p>
+                                <p class="m-5">You have not any save job yet !! </p>
                             {% endif %}
                         </div>
                         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <!-- Applied Jobs content -->
                             <h5 class="card-header text-center">Applied Posts</h5>
                             {% if appliedjobs %}
-                            <table class="table text-center mt-5">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>Job Title</th>
-                                        <th>Posted Date</th>
-                                        <th>Date expiring</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for job in appliedjobs %}
-                                        <tr id="row_{{ job.id }}">
-                                            <td><a href="{% url 'jobapp:single-job' job.job.id %}">{{ job.job.title }}</a></td>
-                                            <td>{{ job.timestamp | date:'M d, Y'  }}</td>
-                                            <td>{{ job.job.last_date | date:'M d, Y' }}</td>
-                                            <td>
-                                                {% if job.status == "Selected" %}
-                                                    <span class="badge badge-success">Selected</span>
-                                                {% elif job.status == "Rejected" %}
-                                                    <span class="badge badge-danger px-2">Rejected</span>
-                                                {% else %}
-                                                    <span class="badge badge-info px-2">In-Progress</span>
-                                                {% endif %}
-                                            </td>
+                                <table class="table text-center mt-5">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Job Title</th>
+                                            <th>Posted Date</th>
+                                            <th>Date expiring</th>
+                                            <th>Status</th>
                                         </tr>
-                                    {% endfor %}
-
-                                </tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                        {% for job in appliedjobs %}
+                                            <tr id="row_{{ job.id }}">
+                                                <td><a href="{% url 'jobapp:single-job' job.job.id %}">{{ job.job.title }}</a></td>
+                                                <td>{{ job.timestamp | date:'M d, Y' }}</td>
+                                                <td>{{ job.job.last_date | date:'M d, Y' }}</td>
+                                                <td>
+                                                    {% if job.status == "Selected" %}
+                                                        <span class="badge badge-success">Selected</span>
+                                                    {% elif job.status == "Rejected" %}
+                                                        <span class="badge badge-danger px-2">Rejected</span>
+                                                    {% else %}
+                                                        <span class="badge badge-info px-2">In-Progress</span>
+                                                    {% endif %}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
                             {% else %}
-                            <p class="m-5">You have not any applied job yet !! </p>
+                                <p class="m-5">You have not any applied job yet !! </p>
                             {% endif %}
                         </div>
-                        
-                      </div>
+                        <div class="tab-pane fade" id="course" role="tabpanel" aria-labelledby="course-tab">
+                            <!-- My Courses content -->
+                            <h5 class="card-header text-center">My Courses</h5>
+                            {% if appliedcourses %}
+                                <table class="table text-center mt-5">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Course Title</th>
+                                            <th>Room Id</th>
+                                            <th>Time</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for course in appliedcourses %}
+                                            <tr id="row_{{ course.id }}">
+                                                <td><a href="{% url 'jobapp:single-course' course.course.id %}">{{ course.course.name }}</a></td>
+                                                <td> 
+                                                    {% if course.roomid == '' %}
+                                                    <button class="btn  btn-sm" onclick="showPopup('{{ course.roomid }}')">
+                                                        <i class="fa-solid fa-commenting fa-xl" style="color: #062492;"></i> 
+                                                    </button>
+                                                {% else %}
+                                                    <button class="btn  btn-sm" onclick="showPopup1('{{ course.roomid }}')">
+                                                        <i class="fa-solid fa-commenting fa-xl" style="color: #062492;"></i> 
+                                                        <sup style="font-size: 75%; font-family: fantasy; color: #e20505;">1</sup>
+                                                    </button>
+                                                {% endif %}
+                                                
+
+                                         </td>
+                                                <td> <span class="badge badge-success">{{course.course.shift}}</span></td>
+                                                <td>{% if course.roomid == '' %}
+                                                    <button  disabled id="join"  class="btn btn-warning btn-sm" role="button">
+                                                        Join Room
+                                                    </button></a>
+                                                    
+                                                {% else %}
+                                                <a  href="{% url 'jobapp:join_room' %}" target="_blank"><button id="join"  class="btn btn-info btn-sm" role="button">
+                                                    Join Room
+                                                </button></a>
+                                                {% endif %}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            {% else %}
+                                <p class="m-5">You have not any applied course yet !! </p>
+                            {% endif %}
+                        </div>
+                    </div>
+
 
                     {% endif %}
 
@@ -197,11 +255,54 @@
     </div>
     </div>
 </section>
+<!-- Popup with Bootstrap classes -->
+<div class="modal fade" id="popup" tabindex="-1" role="dialog" aria-labelledby="popupLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="popupLabel">Room Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="popupContent">
+                <!-- Content dynamically filled via JavaScript -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block extra_scripts %}
     <script src="{% static 'js/sweet-alert.js' %}"></script>
     <script src="{% static 'js/sweet-alert-ajax.js' %}"></script>
+ 
+
+<script>
+    function showPopup(roomId) {
+        // Set the content of the popup with the room ID
+        document.getElementById('popupContent').innerHTML = `<p>Dear participants,</p>
+        <p align="justify">Please be informed that the room ID will be accessible for your review 15 minutes before the commencement of the class. Subsequently, it will be automatically removed 15 minutes after the class commences. Make sure to join the class promptly using the provided Room ID.</p> <p>Thank you!</p>`;
+
+        // Display the popup using Bootstrap's modal class
+        $('#popup').modal('show');
+    }
+
+    function showPopup1(roomId) {
+        // Set the content of the popup with the room ID
+        document.getElementById('popupContent').innerHTML = `
+    <p>Dear participants,</p>
+    <p align="justify">Please be reminded of the upcoming class, and your attendance is highly valued. The virtual class will be accessible using the provided Room ID: <span style="color: blue;">${roomId}</span>. This information will be available 15 minutes before the class and removed 15 minutes after it begins.</p>
+    <p align="justify">We appreciate your commitment and look forward to your presence. Thank you!</p>
+`;
+
+        // Display the popup using Bootstrap's modal class
+        $('#popup').modal('show');
+    }
+</script>
 {% endblock %}
 
 
