vercel deployment testing

--- a/remote_Job/template/RJadmin/admin.html
+++ b/remote_Job/template/RJadmin/admin.html
@@ -84,7 +84,7 @@
 
 <body>
     <nav class="navbar fixed-top navbar-expand-lg">
-        <a class="navbar-brand" href="#">Course Admin</a>
+        <a class="navbar-brand" href=".">{{request.user.first_name}} {{request.user.last_name}}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
