--- a/remote_Job/template/RJadmin/adminlogin.html
+++ b/remote_Job/template/RJadmin/adminlogin.html
@@ -15,7 +15,8 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h3 class="text-center">Login</h3>
+                    <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 100%; height: 180px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
+                    <h3 class="text-center mt-3"> Course Admin Login</h3>
                     {% include 'messages.html' %}
 
                 </div>
