--- a/remote_Job/template/jobapp/course-single.html
+++ b/remote_Job/template/jobapp/course-single.html
@@ -95,7 +95,7 @@
           <!-- <figure class="mb-5"><img src="images/job_single_img_1.jpg" alt="Image" class="img-fluid rounded"></figure> -->
           <h3 class="h5 d-flex align-items-center mb-4 text-primary"><span class="icon-align-left mr-3"></span>Course
             Description</h3>
-          <p align="justify">{{ course.description | safe }}</p> 
+          <div align="justify">{{ course.description | safe }}</div> 
         </div>
 
         
