--- a/remote_Job/template/jobapp/job-single.html
+++ b/remote_Job/template/jobapp/job-single.html
@@ -121,7 +121,7 @@
           <!-- <figure class="mb-5"><img src="images/job_single_img_1.jpg" alt="Image" class="img-fluid rounded"></figure> -->
           <h3 class="h5 d-flex align-items-center mb-4 text-primary"><span class="icon-align-left mr-3"></span>Job
             Description</h3>
-          {{ job.description | safe }}
+          <div align="justify">{{ job.description | safe }}</div>
         </div>
 
         
