--- a/remote_Job/template/jobapp/mail.html
+++ b/remote_Job/template/jobapp/mail.html
@@ -16,7 +16,7 @@
 
     <div style="background-color: #f5f5f5; padding: 20px; text-align: center;">
 
-        <h2 style="color: #333333;">Remote Job Finder</h2>
+        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 80%; height: 180px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
         <p align="left">Hello {{ name }},</p>
         <!-- Job Application Status Content -->
         <p align="justify">
