--- a/remote_Job/template/account/activation_email.html
+++ b/remote_Job/template/account/activation_email.html
@@ -15,6 +15,7 @@
 <body>
 
     <div style="background-color: #f5f5f5; padding: 20px; text-align: center;">
+        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 80%; height: 150px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
 
         <h2 style="color: #333333;">Welcome to Remote Job Finder, {{ user.first_name }} {{user.last_name}}!</h2>
 
