--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -22,10 +22,16 @@
       <div class="col-lg-3">
         <div class="border p-3 rounded">
           <h3>Select/Reject:</h3> 
+          {% if applicant1.status == "Pending" %}
             <div class="d-flex">
-              <span  class="p-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')"><i class="fa-solid fa-circle-check fa-beat fa-2xl" style="color: #3cda10;"></i> </span>
+              <span   class="p-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')"><i class="fa-solid fa-circle-check fa-beat fa-2xl" style="color: #3cda10;"></i> </span>
               <span class="p-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('reject')"><i class="fa-solid fa-circle-xmark  fa-beat fa-2xl" style="color: #da0707;"></i></span>
           </div>
+          {%elif applicant1.status == "Selected"%}
+          <span class="badge badge-success px-4 mx-4">Already {{applicant1.status}} </span>
+          {%else%}
+          <span class="badge badge-danger px-4 mx-4">Already {{applicant1.status}} </span>
+          {%endif%}
           
         </div>
       </div>
@@ -103,7 +109,7 @@
             </div>
             <div class="form-group">
               <label for="company_name">Company Name:</label>
-              <input type="text" class="form-control" id="company_name" value="{{ user.first_name }}" readonly>
+              <input type="text" class="form-control" id="company_name" value="{{ applicant1.job.company_name }}" readonly>
             </div>
             <div class="form-group">
               <label for="position">Position:</label>
