--- a/remote_Job/template/jobapp/course_mail.html
+++ b/remote_Job/template/jobapp/course_mail.html
@@ -3,8 +3,7 @@
 
 {% autoescape off %}
 
-<!DOCTYPE html>
-<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +18,7 @@
     <div style="background-color: #f5f5f5; padding: 20px; text-align: center;">
 
         <!-- Text as a logo with inline CSS styling -->
-        <h3 style="color: #1c9800; font-size: 24px; font-weight: bold; margin-bottom: 10px;">Remote Job Finder Course</h3>
+        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 80%; height: 180px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
         <h4 style="color: #333333;">Payment Receipt</h4>
 
         <!-- Course Status Content -->
