--- a/template/footer.html
+++ b/template/footer.html
@@ -52,8 +52,7 @@
 
               Copyright &copy; <a>
               <script type="text/JavaScript">
-                document.write(new Date().getFullYear());</script> Unique Biwas
-                
+                document.write(new Date().getFullYear());</script> Testing
                 </div>
             </a>
             
