--- a/template/jobapp/course_mail.html
+++ b/template/jobapp/course_mail.html
@@ -18,7 +18,8 @@
     <div style="background-color: #f5f5f5; padding: 20px; text-align: center;">
 
         <!-- Text as a logo with inline CSS styling -->
-        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 80%; height: 180px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
+        <img src="https://i.ibb.co/wB7FVYG/remote-job-finder-high-resolution-logo-transparent.png" style="width: 81%; height: 180px;  object-fit: fill; position: relative; z-index: 1;" alt="Image" class="img-fluid">
+        <div  style=" padding-left: 58%; font-family: 'Times New Roman', Times, serif; font-size: large; font-weight: 800; color: blue;">Invoice Number: {{tax_num}}</div> 
         <h4 style="color: #333333;">Payment Receipt</h4>
 
         <!-- Course Status Content -->
@@ -27,8 +28,8 @@
             <br>
             Congratulations! You have successfully enrolled in the course. Kindly check your dashboard's course section for roomId, and be sure to check the roomId 15 minutes before the scheduled time. <p>Happy learning!</p> 
 
-            <h3> Here are the details: </h3>
-
+            <h3> Here are the details: </h3>  
+            
             <!-- Add border directly to the table elements -->
             <table style="border-collapse: collapse; width: 100%; margin-top: 20px; border: 1px solid #333;">
                 <tr style="border: 1px solid #333;">
