Chat with us bot added for FAQs

--- a/template/jobapp/course-single.html
+++ b/template/jobapp/course-single.html
@@ -34,7 +34,7 @@
             <img src="{{ course.image.url }}" alt="Image" style="width: 250px; height: 150px; object-fit: fill; ">
 
           </div>
-          <div>
+          <div class="row">
             <h2>{{ course.name }}</h2>
             <div>
               <span class="ml-0 mr-2 mb-2"><span class="icon-briefcase mr-2"></span><a href="#">{{ course.name }}</a></span> <br>
