--- a/template/jobapp/index.html
+++ b/template/jobapp/index.html
@@ -13,7 +13,8 @@
         <div class="mb-5 text-center">
           <h1 class="text-white font-weight-bold">Elevate Your Career to New Heights!</h1>
           <p class="lead text-white">Discover extraordinary opportunities that match your ambition. Your journey to success begins here, where passion meets profession.
-          <span>Explore our diverse range of courses designed to enhance your skills and propel your career forward.</span></p>
+          </p>
+          <span class="lead text-white">Explore our diverse range of courses designed to enhance your skills and propel your career forward.</span>
           
         </div>
       
@@ -324,7 +325,7 @@ $("#ajax_listing_paginattion" ).delegate( "a#ajax_paginator", "click", function(
 <style>
   df-messenger {
    --df-messenger-bot-message: #878fac;
-   --df-messenger-button-titlebar-color: #1baebe;
+   --df-messenger-button-titlebar-color: #000000;
    --df-messenger-chat-background-color: #fafafa;
    --df-messenger-font-color: white;
    --df-messenger-send-icon: #878fac;
@@ -340,7 +341,7 @@ $("#ajax_listing_paginattion" ).delegate( "a#ajax_paginator", "click", function(
    agent-id="57b1ef66-9258-492b-8e9e-48c87754d6cf"
    language-code="en"
    wait-open
-   chat-icon="https://static.vecteezy.com/system/resources/previews/022/796/186/original/notification-bell-illustration-3d-free-png.png"
+   chat-icon="https://i.pinimg.com/564x/da/55/0c/da550c8592639e347418c90c83c9110d.jpg"
  ></df-messenger>
 
 {% endblock %}
